# knowledgebasedengine

./: .gitignore  CMakeLists.txt
include/core/: application.h
include/core/ecs/: component.h  components.h  entity.h  movement_system.h  render_system.h  system.h  world.h
include/core/logger/: logger.h
include/core/math/matrix/: matrix.h
include/core/math/vector/: vec2.h  vec3.h
include/core/math/vertex/: vertex.h
include/core/renderer/: dx9.h  renderer.h
include/core/types/: types.h
include/core/window/: win32.h  window.h
src/: main.c
src/core/: application.c  application.h
src/core/ecs/: component.c  components.c  entity.c  movement_system.c  render_system.c  system.c  world.c
src/core/logger/: logger.c  logger.h
src/core/math/matrix/: matrix.c
src/core/math/vector/: vec2.c  vec2.h  vec3.c
src/core/math/vertex/: vertex.h
src/core/renderer/: dx9.c  renderer.c  renderer.h
src/core/types/: color.c  string_view.c  types.h
src/core/types/string_view/: string_view.c
src/core/window/: window.c  window.h
